--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"build": "npm run clear && npm run lint && npm run tsc",
 		"dev": "tsx ./dev/index.ts",
 		"yalc": "npm run build && yalc push",
-		"install:filen": "npm install @filen/sdk@latest @filen/webdav@latest"
+		"install:filen": "npm install @filen/sdk@latest @filen/webdav@latest",
+		"hashes": "node hashes.mjs"
 	},
 	"repository": {
 		"type": "git",
@@ -35,6 +36,8 @@
 	"devDependencies": {
 		"@jest/globals": "^29.7.0",
 		"@types/fs-extra": "^11.0.4",
+		"@types/uuid": "^10.0.0",
+		"@types/write-file-atomic": "^4.0.3",
 		"@typescript-eslint/eslint-plugin": "^6.20.0",
 		"@typescript-eslint/parser": "^6.20.0",
 		"eslint": "^8.56.0",
@@ -46,6 +49,12 @@
 	"dependencies": {
 		"@filen/sdk": "^0.1.163",
 		"@filen/webdav": "^0.2.37",
-		"fs-extra": "^11.2.0"
+		"axios": "^1.7.6",
+		"diskusage-ng": "^1.0.4",
+		"find-free-ports": "^3.1.1",
+		"fs-extra": "^11.2.0",
+		"sudo-prompt": "^9.2.1",
+		"uuid": "^10.0.0",
+		"write-file-atomic": "^5.0.1"
 	}
 }
