--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@filen/virtual-drive",
-	"version": "0.9.1",
-	"description": "Filen Virtual Drive",
+	"name": "@filen/network-drive",
+	"version": "0.9.2",
+	"description": "Filen Network Drive",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"private": false,
@@ -19,7 +19,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/FilenCloudDienste/filen-virtual-drive.git"
+		"url": "git+https://github.com/FilenCloudDienste/filen-network-drive.git"
 	},
 	"keywords": [
 		"filen"
@@ -30,7 +30,7 @@
 	"author": "Filen",
 	"license": "AGPLv3",
 	"bugs": {
-		"url": "https://github.com/FilenCloudDienste/filen-virtual-drive/issues"
+		"url": "https://github.com/FilenCloudDienste/filen-network-drive/issues"
 	},
 	"homepage": "https://filen.io",
 	"devDependencies": {
@@ -48,7 +48,7 @@
 	},
 	"dependencies": {
 		"@filen/sdk": "^0.1.163",
-		"@filen/webdav": "^0.2.40",
+		"@filen/webdav": "^0.2.41",
 		"axios": "^1.7.6",
 		"diskusage-ng": "^1.0.4",
 		"find-free-ports": "^3.1.1",
