--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/network-drive",
-	"version": "0.9.2",
+	"version": "0.9.3",
 	"description": "Filen Network Drive",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -47,12 +47,14 @@
 		"typescript": "^5.5.4"
 	},
 	"dependencies": {
-		"@filen/sdk": "^0.1.163",
-		"@filen/webdav": "^0.2.41",
+		"@filen/sdk": "^0.1.164",
+		"@filen/webdav": "^0.2.44",
 		"axios": "^1.7.6",
 		"diskusage-ng": "^1.0.4",
 		"find-free-ports": "^3.1.1",
 		"fs-extra": "^11.2.0",
+		"pino": "^9.4.0",
+		"rotating-file-stream": "^3.2.3",
 		"sudo-prompt": "^9.2.1",
 		"uuid": "^10.0.0",
 		"write-file-atomic": "^5.0.1"
